<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/addNoteContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_note" />

                <EditText
                    android:id="@+id/note_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/description_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:selectAllOnFocus="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/priority"
                    android:layout_width="match_parent"
                    android:layout_height="74dp"
                    android:checkedButton="@+id/middlePr">

                    <RadioButton
                        android:id="@+id/highPr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/holo_red_light"
                        android:text="@string/high_priority"
                        tools:text="High priority" />

                    <RadioButton
                        android:id="@+id/middlePr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/holo_orange_light"
                        android:text="@string/middle_priority"
                        tools:text="Middle priority" />

                    <RadioButton
                        android:id="@+id/lowPr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/holo_green_light"
                        android:text="@string/low_priority"
                        tools:text="Low priority" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/noteSelectedImage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:padding="10dp"
                    android:textAlignment="center"
                    app:srcCompat="@mipmap/ic_launcher"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="128dp" />

                <Button
                    android:id="@+id/addImageAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_image" />

                <Button
                    android:id="@+id/addNoteAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_note" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>